1)角色接口封装完成 2)克隆接口封装完成 3)联系人接口封装完成 4)合同接口部分封装 5)增加相关ESI接口的test